...
            title: "Calendar",
            tabBarIcon: ({ color }) => <Icon as={CalendarDays} size={28} color={color} />,
            tabBarButton: (props) => (
              <MeasuredTabButton
                {...props}
                routeKey="route-calendar"
                testID="tab-button-calendar"
              />
            ),
          }}
        />
        <Tabs.Screen
          name="profile"
...
