appId: ${MAESTRO_APP_ID}
---
- runFlow:
    file: ./reset_to_home.yaml
- tapOn:
    id: "tab-button-calendar"
- repeat:
    times: 2
    commands:
      - tapOn:
          id: "tab-button-calendar"
- extendedWaitUntil:
    visible:
      text: "Calendar"
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: "calendar-screen-ready"
    timeout: 15000
- extendedWaitUntil:
    visible:
      id: "create-event-entry"
    timeout: 15000
